# mcp-memory

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.es.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CLIENTS.md  INSTALL.md
server/: pyproject.toml
server/scripts/: smoke_e2e.py
server/src/mcp_memory/: server.py
server/src/mcp_memory/faithfulness/: gate.py  rubric.md
server/src/mcp_memory/shared/: config.py  embeddings.py  store.py  types.py
server/src/mcp_memory/tools/export/: handler.py
server/src/mcp_memory/tools/import_/: handler.py
server/src/mcp_memory/tools/save/: handler.py
server/src/openclaw_memory/shared/: config.py
server/tests/: conftest.py
server/tests/integration/: test_e2e.py
server/tests/unit/faithfulness/: test_gate.py
server/tests/unit/tools/: test_export.py  test_import.py  test_save.py
