[project]
name = "mcp-memory"
version = "0.2.0"
description = "Local agent memory exposed via MCP. Ollama embeddings + Qdrant. Drop-in for Claude Code, OpenCode, Cursor, Continue."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Germani Asesino" }]

dependencies = [
    "fastmcp>=2.5.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[project.scripts]
mcp-memory = "mcp_memory.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memory"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: requires running Qdrant + Ollama",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
